# kissearch

./: .gitignore  CMakeLists.txt  README.md  index.db  main.cpp
comparison/: kissearch.sh  kissearch_search.sh  typesense.sh  typesense_search.sh
example/: CMakeLists.txt  example.cpp  index.db  main.cpp
include/: document.h  entry.h  lz4_frame_wrapper.h  porter2.h  str.h
lib/: CMakeLists.txt
lib/include/: collection.h  compression.h  document.h  entry.h  str.h
lib/src/: collection.cpp  compression.cpp  document.cpp  entry.cpp  porter2.cpp
scripts/: install-deps.sh
server/: CMakeLists.txt  main.cpp
server/include/: httplib.h  json.hpp
src/: document.cpp  entry.cpp  porter2.cpp
tests/: CMakeLists.txt  README.md  main.cpp
